@@ -94,6 +94,9 @@ Default HTTP Exception View
 Minor Feature Additions
 -----------------------
 
+- A `JSONP <http://en.wikipedia.org/wiki/JSONP>`_ renderer.  See
+   :ref:`jsonp_renderer` for more details.
+
 - New authentication policy:
   :class:`pyramid.authentication.SessionAuthenticationPolicy`, which uses a
   session to store credentials.
